remove "mvn test"